# esp32-wifi-screen

./: .gitignore  LICENSE  README.en.md  README.md  TODO.md  flash_esp32s2.ps1  flash_esp32s3.ps1  init_env.ps1  sdkconfig.defaults.esp32s2  sdkconfig.defaults.esp32s2.tmp  sdkconfig.defaults.esp32s3  sdkconfig.defaults.md
docs/: WIFI_DELTA_LZ4_PROTOCOL.md
examples/: .gitignore  Cargo.toml  run-usb-serial.cmd
examples/src/: draw_bitmap.rs  draw_gif.rs  draw_png.rs  find_usb_scr.rs  main.rs  usb_screen.rs
examples/tools/: package.json  serial_send_test.js  serial_speed_test.js  serial_test.js
html/: index.html
mipidsi/: Cargo.toml
mipidsi/src/dcs/: set_address_mode.rs  set_pixel_format.rs  set_scroll_start.rs
mipidsi/src/interface/: parallel.rs  spi.rs
scr/: .gitignore  BUILD.md  Cargo.toml  README.en.md  README.md  TODO.md  USB设备说明.md  bootloader对比.txt  build.ps1  build.rs  build_esp32s2.ps1  build_esp32s3.ps1  espup_env.ps1  flash.cmd  flash.ps1  flash_esp32s2.ps1  flash_esp32s3.ps1  monitor.ps1  partitions.csv  sdkconfig.defaults  sdkconfig.defaults.esp32s2  sdkconfig.defaults.esp32s2.tmp  sdkconfig.defaults.esp32s3  安装.md
scr/.cargo/: config.toml
scr/examples/: mqtt.md
scr/examples/nodejs/: clock.js  index.js
scr/examples/python/: example.py
scr/examples/rust/: Cargo.toml
scr/html/: example.html  index.html
scr/mipidsi/src/: batch.rs  builder.rs  interface.rs  lib.rs  models.rs  options.rs
scr/mipidsi/src/dcs/: set_column_address.rs  set_invert_mode.rs  set_page_address.rs  set_scroll_area.rs  set_tearing_effect.rs
scr/mipidsi/src/options/: orientation.rs
scr/src/: canvas.rs  config.rs  display.rs  http_server.rs  main.rs  mqtt_client.rs  tjpgd.rs  tjpgd_rgb565.rs  usb_reader.rs  utils.rs
scr/src/imageproc/: mod.rs  point.rs  rect.rs
scr/src/imageproc/drawing/: bezier.rs  conics.rs  cross.rs  fill.rs  polygon.rs  rect.rs
scr/接线/: ST7735S_128x160_CS.md  ST7735S_80x160_CS.md  ST7789V_135x240_CS.md  ST7789_240x240.md  ST7789_240x320_CS.md  ST7796_320x480.md
src/: canvas.rs  config.rs  display.rs  http_server.rs  main.rs  usb_reader.rs
src/imageproc/: pixelops.rs
src/imageproc/drawing/: line.rs  text.rs
tjpgd/: CHANGELOG.md  Cargo.toml  ESP32_PREPARE_ISSUE_ANALYSIS.md  README.en.md  README.md  RUST_C_DIFF_ANALYSIS.md  提问.txt
tjpgd/examples/: basic.rs  compare_outputs.ps1  jpg2bmp.rs  jpg2bmp_pool.rs  memory_comparison.rs  size_check.rs  test_info.rs  test_suite.rs
tjpgd/src/: decoder.rs  huffman.rs  lib.rs
tools/examples/nodejs/: package-lock.json  package.json
tools/examples/rust/: main.rs
tools/examples/src/: reboot.rs  usb_screen.rs
tools/speedtest/: README.md  com5test.cmd  package-lock.json  send_image.js  test.cmd
tools/wifi-screen-client/: .gitignore  build.rs  wifi-screen-client.ini
tools/wifi-screen-client/.cargo/: config.toml
tools/wifi-screen-client/src/: recorder.rs
wifi-screen-client/: Cargo.toml  wifi-screen-client.ini
wifi-screen-client/src/: main.rs  recorder.rs  uploader.rs  usb_serial.rs
