[package]
name = "esp32-wifi-screen"
version = "1.0.3"
authors = ["JiaYe <planet2@qq.com>"]
edition = "2021"
resolver = "2"
rust-version = "1.77"

[[bin]]
name = "esp32-wifi-screen"
harness = false # do not use the built in cargo test harness -> resolve rust-analyzer errors

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = ["esp32s2", "experimental"]

# 芯片选择 features (互斥，只能选择一个)
esp32s2 = []
esp32s3 = []

experimental = ["esp-idf-svc/experimental"]


[dependencies]
log = "0.4"
esp-idf-svc = { version = "0.51", features = ["critical-section", "experimental"] }
esp-idf-hal = "0.45"
embedded-svc = {version = "0.28.1", features = [ "use_serde" ] }
anyhow = { version = "1", default-features = false }
serde_json = { version = "1", default-features = false, features = ["std"]}
serde = { version = "1", default-features = false, features = ["derive"]}
non-empty-string = { version = "0.2.5", features = ["serde"] }

static_cell = "2.1.0"
mipidsi = { path = "./mipidsi" }
lz4_flex = "0.11.3"
ab_glyph = { version="0.2.29", default-features = false, features = ["libm"] }
embedded-graphics = "0.8.1"
embedded-canvas = "0.3.1"
once_cell = "1.20.2"
mimetype = "0.1.6"
num = { version = "0.4.1", default-features = false }
image = { version = "0.25.5", default-features = false, features = ["gif", "png"] }
url = "2.5.4"
csscolorparser = "0.7.0"
data-encoding = "2.8.0"
tjpgdec-rs = { version = "0.4.0", default-features = false, features = ["fast-decode-2"] }

[build-dependencies]
embuild = "0.33"

[package.metadata."esp-idf-sys"]
# Force embuild / esp-idf-sys to use workspace installation and specific ESP-IDF version
esp_idf_tools_install_dir = "workspace"
esp_idf_version = "v5.3.4"
esp_idf_sdkconfig_defaults = ["sdkconfig.defaults.esp32s2", "sdkconfig.defaults.esp32s3"]
