[package]
name = "wifi-screen-client"
version = "1.0.1"
edition = "2021"

[dependencies]
xcap = "0.2.2"
anyhow = "1"
image = { version = "=0.25.5", default-features = false, features = ["jpeg", "gif"]}
tao = "0.31.1"
tray-icon = "0.19.2"
slint = "1.9.2"
rfd = "0.15.2"
rust-ini = "0.21"
mouse_position = "0.1.4"
async-std = "1.13.0"
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
once_cell = "1.20.2"
crossbeam-channel = "0.5.14"
tungstenite = "0.26.1"
uuid = { version = "1.12.0", features = ["v4"]}
lz4_flex = "0.11.3"
fast_image_resize = "5.1.1"

[build-dependencies]
winresource = "0.1.19"

[profile.release]
strip = true
opt-level = "z"
lto = true
panic = "abort"
codegen-units = 1