[package]
name = "wifi-scr-example"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
serde_json = { version = "1", default-features = false, features = ["std"]}
serde = { version = "1", default-features = false, features = ["derive"]}
image = { version = "0.25.5", default-features = false, features = ["png", "gif"]}
lz4_flex = { version="0.11.3", default-features = false }
ureq = "3.0.6"